--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     <main>
         <div class="mainPage">
             <div id="quiz">
-                <h2>Hipster Ipsum</h2>
+                <h2>Take the Dog Quiz</h2>
                 <p>Quiz description</p>
-                <!--form actions-->
-            <button id="startQuiz">Start Quiz</button>
-            <button id="restartQuiz">Restart Quiz</button>
             </div> 
         </div>
     </main>
